# interactive-model-downloader

./: .gitignore  .prettierrc  Cargo.toml  README.md
src/: cache_db.rs  configuration.rs  downloader.rs  errors.rs  main.rs  utils.rs
src/civitai/: complete_meta.rs  download_task.rs  meta.rs  mod.rs  model.rs  selections.rs
src/commands/: config.rs  download.rs  mod.rs  renew.rs
