[package]
name = "imd"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
html2md-rs = "0.10.2"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
reqwest = { version = "0.12.19", features = [
  "default",
  "multipart",
  "json",
  "gzip",
  "socks",
  "stream",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing",
  "rand",
  "serde",
  "serde-human-readable",
] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
