[package]
name = "imd"
version = "0.1.6"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
clap = { version = "4.5.40", features = ["derive"] }
crc32fast = "1.4.2"
dialoguer = "0.11.0"
directories = "6.0.0"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
html2md = "0.2.15"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
image = "0.25.6"
indicatif = { version = "0.17.11", features = ["tokio"] }
reqwest = { version = "0.12.20", features = [
  "default",
  "multipart",
  "json",
  "gzip",
  "socks",
  "stream",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.140"
sled = { version = "0.34.7", features = ["compression", "mutex"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing",
  "rand",
  "serde",
  "serde-human-readable",
] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
